--- a/arch_setup.conf
+++ b/arch_setup.conf
@@ -1,3 +1,12 @@
 loadkeys no
 timedatectl set-timezone Europe/Oslo
+fdisk /dev/nvme0n1
+
+g
+n
++1G
+t
+1
+
+pacstrap -K /mnt base linux-zen linux-firmware grub amd-ucode nano nvidia nvidia-utils
 
