--- a/arch_setup.conf
+++ b/arch_setup.conf
@@ -8,5 +8,9 @@ n
 t
 1
 
-pacstrap -K /mnt base linux-zen linux-firmware grub amd-ucode nano nvidia nvidia-utils
+mount /dev/nvme0n1p3 /mnt
+mount --mkdir /dev/nvme0n1p1 /mnt/boot
+
+pacstrap -K /mnt base linux-zen linux-firmware grub amd-ucode nano nvidia nvidia-utils networkmanager
+systemctl enable NetworkManager
 
