--- a/arch_setup.conf
+++ b/arch_setup.conf
@@ -11,6 +11,6 @@ t
 mount /dev/nvme0n1p3 /mnt
 mount --mkdir /dev/nvme0n1p1 /mnt/boot
 
-pacstrap -K /mnt base linux-zen linux-firmware grub amd-ucode nano nvidia nvidia-utils networkmanager
+pacstrap -K /mnt base linux-zen linux-firmware grub amd-ucode nano nvidia nvidia-utils networkmanager linux-zen-headers
 systemctl enable NetworkManager
 
