--- a/arch_setup.conf
+++ b/arch_setup.conf
@@ -1,3 +1,5 @@
+// ----- Install ----- //
+
 loadkeys no
 timedatectl set-timezone Europe/Oslo
 fdisk /dev/nvme0n1
@@ -13,4 +15,9 @@ mount --mkdir /dev/nvme0n1p1 /mnt/boot
 
 pacstrap -K /mnt base linux-zen linux-firmware grub amd-ucode nano nvidia nvidia-utils networkmanager linux-zen-headers
 systemctl enable NetworkManager
+
+// ----- Setup ----- //
+
+useradd -m -G wheel -s /bin/bash username
+
 
