--- a/arch_setup.conf
+++ b/arch_setup.conf
@@ -13,11 +13,14 @@ t
 mount /dev/nvme0n1p3 /mnt
 mount --mkdir /dev/nvme0n1p1 /mnt/boot
 
-pacstrap -K /mnt base linux-zen linux-firmware grub amd-ucode nano nvidia nvidia-utils networkmanager linux-zen-headers
+pacstrap -K /mnt base linux-zen linux-zen-headers linux-firmware grub amd-ucode sudo nano nvidia nvidia-utils networkmanager
 systemctl enable NetworkManager
 
 // ----- Setup ----- //
 
 useradd -m -G wheel -s /bin/bash username
+passwd
+
+EDITOR=nano visudo
 
 
