--- a/arch_setup.conf
+++ b/arch_setup.conf
@@ -12,8 +12,15 @@ t
 
 mount /dev/nvme0n1p3 /mnt
 mount --mkdir /dev/nvme0n1p1 /mnt/boot
+swapon /dev/nvme0n1p2
 
 pacstrap -K /mnt base linux-zen linux-zen-headers linux-firmware grub amd-ucode sudo nano nvidia nvidia-utils networkmanager
+
+genfstab -U /mnt >> /mnt/etc/fstab
+arch-chroot /mnt
+ln -sf /usr/share/zoneinfo/Europe/Oslo /etc/localtime
+hwclock --systohc
+
 systemctl enable NetworkManager
 
 // ----- Setup ----- //
