--- a/arch_setup.conf
+++ b/arch_setup.conf
@@ -21,6 +21,13 @@ arch-chroot /mnt
 ln -sf /usr/share/zoneinfo/Europe/Oslo /etc/localtime
 hwclock --systohc
 
+locale-gen
+nano /etc/locale.conf
+// Add "LANG=en_US.UTF-8" to locale.conf
+
+nano /etc/vconsole.conf
+// add "KEYMAP=no" to vconsole.conf
+
 systemctl enable NetworkManager
 
 // ----- Setup ----- //
