--- a/arch_setup.conf
+++ b/arch_setup.conf
@@ -28,6 +28,9 @@ nano /etc/locale.conf
 nano /etc/vconsole.conf
 // add "KEYMAP=no" to vconsole.conf
 
+mkinitcpio -P
+passwd
+
 systemctl enable NetworkManager
 
 // ----- Setup ----- //
