--- a/arch_setup.conf
+++ b/arch_setup.conf
@@ -15,6 +15,7 @@ mount --mkdir /dev/nvme0n1p1 /mnt/boot
 swapon /dev/nvme0n1p2
 
 pacstrap -K /mnt base linux-zen linux-zen-headers linux-firmware grub amd-ucode sudo nano nvidia nvidia-utils networkmanager
+pacstrap -K /mnt base linux-lts linux-lts-headers linux-firmware grub amd-ucode sudo nano nvidia nvidia-utils networkmanager
 
 genfstab -U /mnt >> /mnt/etc/fstab
 arch-chroot /mnt
