--- a/arch_setup.conf
+++ b/arch_setup.conf
@@ -44,4 +44,17 @@ EDITOR=nano visudo
 
 // Uncomment %wheel ALL=(ALL:ALL) ALL
 
+// ----- pacman ----- //
+nano /etc/pacman.conf
+ParallelDownloads = 6
+Color
+
+[multilib]
+Include = /etc/pacman.d/mirrorlist
+
+// ----- Hyprland ----- //
+
+
+
+
 
