--- a/arch_setup.conf
+++ b/arch_setup.conf
@@ -48,6 +48,8 @@ EDITOR=nano visudo
 nano /etc/pacman.conf
 ParallelDownloads = 6
 Color
+ILoveCandy
+VerbosePkgLists
 
 [multilib]
 Include = /etc/pacman.d/mirrorlist
