--- a/arch_setup.conf
+++ b/arch_setup.conf
@@ -56,6 +56,22 @@ Include = /etc/pacman.d/mirrorlist
 
 // ----- Hyprland ----- //
 
+sudo pacman -S --needed git base-devel
+git clone https://aur.archlinux.org/yay.git
+cd yay
+makepkg -si
+
+yay -S ninja gcc cmake meson libxcb xcb-proto xcb-util xcb-util-keysyms libxfixes libx11 
+libxcomposite libxrender pixman wayland-protocols cairo pango seatd libxkbcommon xcb-util-wm 
+xorg-xwayland libinput libliftoff libdisplay-info cpio tomlplusplus hyprlang-git hyprcursor-git 
+hyprwayland-scanner-git xcb-util-errors hyprutils-git hyprgraphics-git
+
+git clone --recursive https://github.com/hyprwm/Hyprland
+cd Hyprland
+make all && sudo make install
+
+
+
 
 
 
