--- a/arch_setup.conf
+++ b/arch_setup.conf
@@ -44,6 +44,13 @@ EDITOR=nano visudo
 
 // Uncomment %wheel ALL=(ALL:ALL) ALL
 
+// ----- GRUB ----- //
+sudo pacman -S grub efibootmgr
+sudo mount /dev/sdXn /boot/efi
+sudo grub-install --target=x86_64-efi --efi-directory=/boot/efi --bootloader-id=GRUB
+sudo grub-mkconfig -o /boot/grub/grub.cfg
+
+
 // ----- pacman ----- //
 nano /etc/pacman.conf
 ParallelDownloads = 6
