--- a/arch_setup.conf
+++ b/arch_setup.conf
@@ -61,6 +61,11 @@ VerbosePkgLists
 [multilib]
 Include = /etc/pacman.d/mirrorlist
 
+// ----- Fix KEYERROR ----- //
+sudo cp /lib/udev/hwdb.d/60-keyboard.hwdb /etc/udev/hwdb.d/
+sudo nano /etc/udev/hwdb.d/60-keyboard.hwdb
+sudo systemd-hwdb update
+
 // ----- Hyprland ----- //
 
 sudo pacman -S --needed git base-devel
