--- a/hypr/keybindings.conf
+++ b/hypr/keybindings.conf
@@ -1,15 +1,16 @@
-###################
-### KEYBINDINGS ###
-###################
+# ----- https://github.com/devk0n ----- #
+# ----- KEYBINDINGS ----- #
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
+$terminal = kitty
+$fileManger = thunar
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, F, exec, $fileManger
 bind = $mainMod, V, togglefloating,
 bindr = $mainMod, SUPER_L, exec, ~/.config/hypr/scripts/toggle_wofi.sh
 bindr = $mainMod, SUPER_R, exec, ~/.config/hypr/scripts/toggle_wofi.sh
