--- a/hypr/environment.conf
+++ b/hypr/environment.conf
@@ -1,13 +1,49 @@
-#############################
-### ENVIRONMENT VARIABLES ###
-#############################
+# ----- https://github.com/devk0n ----- #
+# ----- ENVIRONMENT VARIABLES ----- #
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
-env = LIBVA_DRIVER_NAME,nvidia
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
+# ----- QT & Toolkit Backend Variables ----- #
+env = GTK_BACKEND,wayland
+env = GDK_BACKEND,wayland
+env = QT_QPA_PLATFORM,wayland;xcb
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
+env = QT_QPA_PLATFORMTHEME,qt5ct
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1
+
+
+# ----- XDG Specifications ----- #
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
+env = XDG_RUNTIME_DIR,/run/user/1000
+
+
+# ----- NVIDIA EGL and OpenGL Settings ----- #
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = GBM_BACKEND,nvidia-drm
+env = EGL_PLATFORM,wayland
+env = __VK_LAYER_NV_optimus,NVIDIA_only
+env = __EGL_VENDOR,NVIDIA
+
+
+# ----- Vulkan & Mesa Overrides ----- #
+env = _GLFW_WAYLAND,1
+env = VK_ICD_FILENAMES,/usr/share/vulkan/icd.d/nvidia_icd.json
+env = VK_LAYER_PATH,/usr/share/vulkan/implicit_layer.d
+
+
+# ----- Cursor Settings ----- #
 cursor {
     no_hardware_cursors = true
 }
+
+
+# ----- Additional NVIDIA Settings (if needed) ----- #
+# env = __NV_PRIME_RENDER_OFFLOAD,1
+# env = __NV_PRIME_RENDER_OFFLOAD_PROVIDER,NVIDIA-G0
+# env = __GLX_DISPLAY,0
+# env = __GLX_DRIVERS_PATH,/usr/lib/nvidia
+# env = LIBGL_ALWAYS_SOFTWARE,0
