--- a/hypr/windows.conf
+++ b/hypr/windows.conf
@@ -1,15 +1,8 @@
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
+# ----- https://github.com/devk0n ----- #
+# ----- WINDOWS AND WORKSPACES ----- #
 
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
-
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+# ----- personal development window ----- #
+windowrule = float,title:3D Grid Environment
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
