--- a/hypr/autostart.conf
+++ b/hypr/autostart.conf
@@ -1,11 +1,10 @@
-#################
-### AUTOSTART ###
-#################
+# ----- https://github.com/devk0n ----- #
+
+# ----- AUTOSTART ----- #
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
+exec-once = systemctl --user start hyprpolkitagent
+exec-once = waybar
 exec-once = hyprpaper
