--- a/hypr/environment.conf
+++ b/hypr/environment.conf
@@ -1,38 +1,62 @@
 # ----- https://github.com/devk0n ----- #
 # ----- ENVIRONMENT VARIABLES ----- #
 
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+# ----- Essential for Wayland Compatibility ----- #
 
-
-# ----- QT & Toolkit Backend Variables ----- #
-env = GTK_BACKEND,wayland
-env = GDK_BACKEND,wayland
-env = QT_QPA_PLATFORM,wayland;xcb
-env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
-env = QT_QPA_PLATFORMTHEME,qt5ct
-env = QT_AUTO_SCREEN_SCALE_FACTOR,1
-
-
-# ----- XDG Specifications ----- #
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
-env = XDG_RUNTIME_DIR,/run/user/1000
+
+
+# ----- Toolkit and Application Compatibility ----- #
+
+env = GDK_BACKEND,wayland
+env = QT_QPA_PLATFORM,wayland;xcb
+env = SDL_VIDEODRIVER,wayland
+env = CLUTTER_BACKEND,wayland
+
+
+# ----- Theming and Appearance ----- #
+
+env = GTK_THEME,Adwaita:dark          # Replace with your theme
+env = QT_QPA_PLATFORMTHEME,qt5ct      # Required if using qt5ct or Kvantum
+env = XCURSOR_THEME,Adwaita           # Cursor theme
+env = XCURSOR_SIZE,24                 # Cursor size
+
+
+# ----- At Application Tweaks ----- #
+
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
+
+# ----- QT & Toolkit Backend Variables ----- #
+# env = GTK_BACKEND,wayland
+# env = GDK_BACKEND,wayland
+# env = QT_QPA_PLATFORM,wayland;xcb
+# env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
+# env = QT_QPA_PLATFORMTHEME,qt5ct
+# env = QT_AUTO_SCREEN_SCALE_FACTOR,1
+
+
+# ----- XDG Specifications ----- #
+# env = XDG_CURRENT_DESKTOP,Hyprland
+# env = XDG_SESSION_TYPE,wayland
+# env = XDG_SESSION_DESKTOP,Hyprland
+# env = XDG_RUNTIME_DIR,/run/user/1000
 
 
 # ----- NVIDIA EGL and OpenGL Settings ----- #
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-env = GBM_BACKEND,nvidia-drm
-env = EGL_PLATFORM,wayland
-env = __VK_LAYER_NV_optimus,NVIDIA_only
-env = __EGL_VENDOR,NVIDIA
+# env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+# env = GBM_BACKEND,nvidia-drm
+# env = EGL_PLATFORM,wayland
+# env = __VK_LAYER_NV_optimus,NVIDIA_only
+# env = __EGL_VENDOR,NVIDIA
 
 
 # ----- Vulkan & Mesa Overrides ----- #
-env = _GLFW_WAYLAND,1
-env = VK_ICD_FILENAMES,/usr/share/vulkan/icd.d/nvidia_icd.json
-env = VK_LAYER_PATH,/usr/share/vulkan/implicit_layer.d
+# env = _GLFW_WAYLAND,1
+# env = VK_ICD_FILENAMES,/usr/share/vulkan/icd.d/nvidia_icd.json
+# env = VK_LAYER_PATH,/usr/share/vulkan/implicit_layer.d
 
 
 # ----- Cursor Settings ----- #
