--- a/hypr/monitors.conf
+++ b/hypr/monitors.conf
@@ -1,4 +1,5 @@
 # ----- https://github.com/devk0n ----- #
+# ----- MONITORS ----- #
 
 monitor = DP-1, 2560x1440@143.97, 0x0, 1
 monitor = DP-2, 1920x1200@60.00, -1920x0, 1
